# gcode-lisa

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  ToDo.md  VISION.md  pyproject.toml  setup.py
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  lint.yml  tests.yml
assets/icons/: gcode-lisa.icns
docs/architecture/: canvas_refactor_plan.md
docs/architecture/adr/: ADR-001-selection-semantics-are-domain-level-state.md  ADR-002-qtextcursor-is-not-the-authoritative-selection-model.md  ADR-003-multi-selection-is-preserved-despite-qt-limitations.md
packaging/: gcode-lisa.spec
scripts/: Render-Ikons.py  install_linux.sh
src/: __init__.py  main.py  runtime_paths.py
src/analyzer/: analyzer.py
src/gcode/: detection.py  dialects.py  parser.py
src/ui/: about_dialog.py  canvas_panel.py  editor_panel.py  editor_tooltips.py  find_replace_dialog.py  graphics_selection_dialog.py  main_window.py  navigation_service.py  search_service.py  settings_dialog.py  view_math.py  warnings_dialog.py
src/ui/editor/: editor_comments.py  editor_highlighting.py  editor_search.py  editor_selection.py  editor_undo.py  editor_widget.py
src/ui/resources/: strings_de.py  strings_en.py
src/ui/selection/: selection_model.py  selection_types.py
tests/: test_analyzer.py  test_detection.py  test_dialects.py  test_find_replace_dialog.py  test_multidialect_support.py  test_navigation_service.py  test_parser.py  test_search_service.py  test_ui.py
(+3 files in other folders)
