[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcode-lisa"
version = "1.0.0"
description = "GCode Lisa - Cut with confidence. Waste less."
authors = [{ name = "dasarne" }]
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
gcode-lisa = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
